Avoid thread-related crashes in CoverManager

Do all m_statusLabel updating through signals/slots so threads don't get messed up
when both CoverManager status and network events and CoverView mouseover want to
change it.

BUG: 490147